Fixing contrast issue and switching to new (prev) accent color.

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -23,9 +23,13 @@
         --muted: 220 14.3% 95.9%;
         --muted-foreground: 220 8.9% 46.1%;
 
+        // orange accent
         --accent: 24 100% 69%;
         --accent-foreground: 218 61% 7%;
 
+        --accent: 3 89% 64%;
+        --accent-foreground: 218 61% 7%;
+        
         --destructive: 0 84.2% 60.2%;
         --destructive-foreground: 210 20% 98%;
 
@@ -55,6 +59,9 @@
         --secondary-foreground: 218 61% 7%;
 
         --accent: 24 100% 69%;
+        --accent-foreground: 218 61% 7%;
+
+        --accent: 3 89% 64%;
         --accent-foreground: 218 61% 7%;
 
         --destructive: 0 62.8% 30.6%;
